Refactor Text-to-Speech Plugin: Enhance highlighting features and update manifest
- Introduced new interfaces for editor highlighting and extended editor functionality.
- Added support for word highlighting during speech playback with adjustable timing.
- Improved error handling for speech synthesis interruptions and failures.
- Updated highlight styles for paragraphs, words, and sentences to support both CodeMirror 5 and 6.
- Changed plugin ID and name in manifest for better clarity and branding.
- Enhanced plugin description for better understanding of features.

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-text-to-speech",
-	"name": "Obsidian Reader",
+	"id": "reader-for-obsidian",
+	"name": "Reader for Obsidian",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "A plugin that adds text-to-speech capabilities to Obsidian notes",
-	"author": "Your Name",
+	"description": "A text-to-speech plugin for Obsidian that provides a seamless reading experience with multiple voice service options and text highlighting features.",
+	"author": "gndclouds",
 	"isDesktopOnly": true,
-	"authorUrl": "https://github.com/yourusername"
+	"authorUrl": "https://github.com/gndclouds"
 }
