--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "reader-for-obsidian",
-	"name": "Reader for Obsidian",
+	"id": "note-reader",
+	"name": "Note Reader",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "A text-to-speech plugin for Obsidian that provides a seamless reading experience with multiple voice service options and text highlighting features.",
