Update package and manifest files for Note Reader plugin
- Simplified plugin description in manifest.json
- Added styles.css reference to manifest
- Renamed package name to match plugin name
- Updated package description to match manifest

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,9 @@
 	"name": "Note Reader",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "A text-to-speech plugin for Obsidian that provides a seamless reading experience with multiple voice service options and text highlighting features.",
+	"description": "A text-to-speech plugin with multiple voice service options and text highlighting features.",
 	"author": "gndclouds",
+	"authorUrl": "https://github.com/gndclouds",
 	"isDesktopOnly": true,
-	"authorUrl": "https://github.com/gndclouds"
+	"styles": "styles.css"
 }
